--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-slider": "^0.11.0",
+    "react-native-track-player": "^1.0.0",
+    "react-navigation": "^2.18.0",
     "uninstall": "0.0.0"
   }
 }
